--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/app.js",
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
-    "start": "node app.js"
+    "start": "node api/app.js"
   },
   "keywords": [],
   "author": "",
