--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/edge-config": "^1.2.1",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "firebase": "^10.13.0",
+    "firebase-admin": "^12.4.0"
   }
 }
