--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,10 @@
 {
-  "version": 2,
+  "builds": [
+    {
+      "src": "api/app.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
